--- a/src/app/containers/gallery-dash/gallery-dash.component.html
+++ b/src/app/containers/gallery-dash/gallery-dash.component.html
@@ -36,5 +36,11 @@
     </div>
   </mat-drawer>
 
+  <a routerLink="/info" class="nav-btn-down">
+    <button fxLayout mat-button class="nav-btn-down">
+      <p>Info</p>
+      <mat-icon>expand_more</mat-icon>
+    </button>
+  </a>
   <!-- View gallery -->
 </mat-drawer-container>
