--- a/src/app/components/dialog-view/dialog-view.component.scss
+++ b/src/app/components/dialog-view/dialog-view.component.scss
@@ -1,22 +1,22 @@
-// .image-cont {
-//   height: 100%;
-//   width: auto;
-//   img {
-//     max-height: 100%;
-//     max-width: 100%;
-//   }
-// }
-
 .image-cont {
-  display: flex;
-  flex: 1 1 0;
-  background-size: cover;
-  width: 100%;
+  position: relative;
   height: 100%;
-
+  width: 80%;
   img {
-    height: 100%;
-    width: 100%;
-    opacity: 1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: auto;
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
   }
+}
+
+.dialog {
+  height: 80vh;
+  width: 80vw;
+  display: flex;
+  flex-direction: row;
 }
