--- a/src/app/containers/gallery-dash/gallery-dash.component.scss
+++ b/src/app/containers/gallery-dash/gallery-dash.component.scss
@@ -1,12 +1,13 @@
 @import '../../../theme';
 
 .dash{
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
-
 .container {
+  // height: 80%;
+  // width: auto;
   display: flex;
   justify-content: center;
 
