--- a/src/theme.scss
+++ b/src/theme.scss
@@ -263,19 +263,47 @@ html {
 }
 
 body {
+  background-color: $light-background;
   margin: 0;
   height: 100%;
   min-height: 100%;
+  transition: transform 0.9s ease;
 }
 
 .full-width-dialog .mat-dialog-container {
-  // max-width: 80vw !important;
-  max-height: 80vh !important;
   padding: 0;
-  display: flex;
   background: none;
-  overflow: hidden;
   box-shadow: none;
-  // display: flex;
-  // flex-direction: column;
+}
+
+.nav-btn {
+  padding: 1vh 1vw;
+  position: fixed;
+  top: 0;
+  color: #abcc9a;
+  text-decoration: none;
+  width: 100%;
+  display: flex;
+  flex-direction: column !important;
+  align-items: center;
+  p {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.nav-btn-down {
+  padding: 1vh 1vw !important;
+  position: fixed;
+  bottom: 0;
+  color: #abcc9a;
+  text-decoration: none;
+  width: 100%;
+  display: flex;
+  flex-direction: column !important;
+  align-items: center;
+  p {
+    margin: 0;
+    padding: 0;
+  }
 }
