--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,7 +1,11 @@
-.search-input{
-	display: initial;
+.search-input {
+  display: initial;
 }
 
-.search-field{
-	display: flex;
+.search-field {
+  display: flex;
+}
+
+.search-btn {
+  border-radius: 0;
 }
