--- a/src/app/containers/gallery-dash/gallery-dash.component.scss
+++ b/src/app/containers/gallery-dash/gallery-dash.component.scss
@@ -1,6 +1,6 @@
-@import '../../../theme';
+@import "../../../theme";
 
-.dash{
+.dash {
   width: 100%;
   height: 100%;
 }
@@ -15,16 +15,32 @@
     padding-top: 30vh;
     text-align: center;
 
-    .title{
+    .title {
       padding-bottom: 3vh;
     }
 
-    .results{
+    .results {
       padding-top: 25vh;
     }
   }
 }
 
-.drawer{
-  width:70%
+.drawer {
+  width: 70%;
+}
+
+.nav-btn-down {
+  position: fixed;
+  bottom: 0;
+  color: #abcc9a;
+  text-decoration: none;
+  width: 100%;
+  display: flex;
+  flex-direction: column !important;
+  align-items: center;
+  p {
+    font-size: large;
+    margin: 2vh 0 -2vh 0;
+    padding: 0;
+  }
 }
