--- a/src/theme.scss
+++ b/src/theme.scss
@@ -267,7 +267,7 @@ body {
   margin: 0;
   height: 100%;
   min-height: 100%;
-  transition: transform 0.9s ease;
+  transition: all 0.9s ease;
 }
 
 .full-width-dialog .mat-dialog-container {
@@ -276,34 +276,17 @@ body {
   box-shadow: none;
 }
 
-.nav-btn {
-  padding: 1vh 1vw;
-  position: fixed;
-  top: 0;
-  color: #abcc9a;
-  text-decoration: none;
-  width: 100%;
-  display: flex;
-  flex-direction: column !important;
-  align-items: center;
-  p {
-    margin: 0;
-    padding: 0;
-  }
+.dialog-backdrop {
+  backdrop-filter: blur(7px) saturate(40%) brightness(50%) contrast(60%);
 }
 
-.nav-btn-down {
-  padding: 1vh 1vw !important;
-  position: fixed;
-  bottom: 0;
-  color: #abcc9a;
-  text-decoration: none;
-  width: 100%;
-  display: flex;
-  flex-direction: column !important;
-  align-items: center;
-  p {
-    margin: 0;
-    padding: 0;
-  }
+body
+  > app-root
+  > app-gallery
+  > app-gallery-dash
+  > mat-drawer-container
+  > div.mat-drawer-backdrop.ng-star-inserted.mat-drawer-shown {
+  background-color: rgba(#e6f0e1, 0.3);
+  backdrop-filter: blur(0.5px) brightness(70%);
+  transition: transform 0.9s ease;
 }
