--- a/src/app/containers/gallery-dash/gallery-dash.component.html
+++ b/src/app/containers/gallery-dash/gallery-dash.component.html
@@ -26,6 +26,7 @@
     position="end"
     class="drawer"
     [opened]="sidebar"
+    (closedStart)="sidebar = false"
     autoFocus="true"
   >
     <div class="gallery">
