--- a/src/app/pages/info/info.component.html
+++ b/src/app/pages/info/info.component.html
@@ -13,7 +13,7 @@
       class="container"
     >
       <div class="spacer"></div>
-      <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="5vh">
+      <div fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="2vh">
         <h1 class="mat-display-3">Project Info:</h1>
 
         <p class="mat-display-1">
@@ -24,11 +24,13 @@
           Hi Jesse and Kacy, thank you again for giving me the opportunity to
           interview with Adaptiva! Hopefully my additions to the base project
           are satisfactory beyond just pulling from the Lorem Picsum api. This
-          was my first time using Angular for anything so please keep that in
-          mind! It was fun though and I think I could get caught up to speed on
-          creating anything required of me in Adaptiva with minimal extra
-          training needed.
+          was my first time using Angular coming from React so please keep that
+          in mind! It was fun though and I think I could get caught up to speed
+          on creating anything required of me fairly quickly since the
+          documentation around Angular seems to be pretty well done.
         </p>
+
+        <p>Thanks!</p>
 
         <svg
           viewBox="0 0 230 80"
@@ -48,7 +50,7 @@
       </div>
       <div class="spacer"></div>
       <div fxLayout="row" fxLayoutGap="4vw" fxFlex>
-        <div fxFlex>
+        <div fxFlex fxLayout="column" fxLayoutGap="2vh">
           <div>
             <h1 class="mat-subheading-1">Fonts Used:</h1>
             <p style="padding-left: 3vw">
@@ -62,7 +64,7 @@
             </p>
           </div>
 
-          <div>
+          <div fxFlex>
             <h1 class="mat-subheading-1">Libraries Used:</h1>
             <mat-list class="list">
               <mat-list-item class="list-item"
@@ -87,7 +89,18 @@
               >
             </mat-list>
           </div>
+
+          <div fxFlex>
+            <p>
+              I also have a design instagram where I occasionally make poster
+              designs on random things.
+            </p>
+            <a href="https://www.instagram.com/i.skyz.design/"
+              >https://www.instagram.com/i.skyz.design/</a
+            >
+          </div>
         </div>
+
         <div fxFlex>
           <div>
             <h1>Requirements:</h1>
