--- a/src/app/components/dialog-view/dialog-view.component.scss
+++ b/src/app/components/dialog-view/dialog-view.component.scss
@@ -1,7 +1,7 @@
 .image-cont {
   position: relative;
   height: 100%;
-  width: 85%;
+  width: 80%;
   img {
     position: absolute;
     top: 50%;
@@ -11,6 +11,7 @@
     display: block;
     max-width: 100%;
     max-height: 100%;
+    transition: all 0.9 ease;
   }
 }
 
